--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Object files
-*.o
-*.ko
+#Eclipse
 
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
+.project
+.buildpath
+.settings/*
